--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,11 +16,10 @@
     <!-- Set Filters -->
     <filter>
         <filter-name>CharacterEncodingFilter</filter-name>
-        <filter-class>org.springframework.web.filter.CharacterEncodingFilter
-        </filter-class>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
         <init-param>
             <param-name>encoding</param-name>
-            <param-value>OTF-8</param-value>
+            <param-value>UTF-8</param-value>
         </init-param>
         <init-param>
             <param-name>forceEncoding</param-name>
@@ -29,13 +28,11 @@
     </filter>
     <filter>
         <filter-name>HttpMethodFilter</filter-name>
-        <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter
-        </filter-class>
+        <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
     </filter>
     <filter>
         <filter-name>Spring OpenEntityManagerinViewFilter</filter-name>
-        <filter-class>org.springframework.orm.jpa.support.
-            OpenEntityManagerinViewFilter</filter-class>
+        <filter-class>org.springframework.orm.jpa.support.OpenEntityManagerinViewFilter</filter-class>
     </filter>
 
     <!-- Set Filters Mapping -->
@@ -61,8 +58,7 @@
     <!-- Set Up Servlets -->
     <servlet>
         <servlet-name>appServlet</servlet-name>
-        <servlet-class>org.springframework.web.servlet.DispatcherServlet
-        </servlet-class>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
             <!-- carefull -->
