--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
             <artifactId>joda-time-jsptags</artifactId>
             <version>1.1.1</version>
         </dependency>
+        <!-- Logger API -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
     </dependencies>
 
 </project>
