--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,11 @@
     <artifactId>SpringContactService</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <org.springframework-version>3.2.3.RELEASE</org.springframework-version>
+        <org.slf4j-version>1.7.25</org.slf4j-version>
+    </properties>
+
     <dependencies>
         <!-- JPA 2 -->
         <dependency>
@@ -19,13 +24,13 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
-            <version>1.9.0.RELEASE</version>
+            <version>2.0.0.M4</version>
         </dependency>
         <!-- Spring JPA -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jpa</artifactId>
-            <version>2.0.8</version>
+            <version>2.0.0.M4</version>
         </dependency>
         <!-- Hibernate -->
         <dependency>
@@ -55,19 +60,19 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>3.1.1.RELEASE</version>
+            <version>${org.springframework-version}</version>
         </dependency>
         <!-- Spring WEB MVC -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>4.3.9.RELEASE</version>
+            <version>${org.springframework-version}</version>
         </dependency>
         <!-- Spring ORM -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
-            <version>2.5.1</version>
+            <version>${org.springframework-version}</version>
         </dependency>
         <!-- Jadira API -->
         <dependency>
@@ -91,7 +96,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.25</version>
+            <version>${org.slf4j-version}</version>
         </dependency>
     </dependencies>
 
