--- a/pom.xml
+++ b/pom.xml
@@ -24,13 +24,13 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
-            <version>2.0.0.M4</version>
+            <version>1.3.2.RELEASE</version>
         </dependency>
         <!-- Spring JPA -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jpa</artifactId>
-            <version>2.0.0.M4</version>
+            <version>2.0.8</version>
         </dependency>
         <!-- Hibernate -->
         <dependency>
