--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,8 +9,7 @@
     <!-- Root Context Config -->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <!-- carefull -->
-        <param-value>classpath:../webapp/WEB-INF/spring/root-context.xml</param-value>
+        <param-value>/WEB-INF/spring/root-context.xml</param-value>
     </context-param>
 
     <!-- Set Filters -->
@@ -31,7 +30,7 @@
         <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
     </filter>
     <filter>
-        <filter-name>Spring OpenEntityManagerinViewFilter</filter-name>
+        <filter-name>SpringOpenEntityManagerInViewFilter</filter-name>
         <filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>
     </filter>
 
@@ -45,14 +44,13 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     <filter-mapping>
-        <filter-name>Spring OpenEntityManagerinViewFilter</filter-name>
+        <filter-name>SpringOpenEntityManagerInViewFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
     <!-- Set Listener -->
     <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener
-        </listener-class>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
     <!-- Set Up Servlets -->
@@ -61,9 +59,7 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <init-param>
             <param-name>contextConfigLocation</param-name>
-            <!-- carefull -->
-            <param-value>classpath:../webapp/WEB-INF/spring/appServlet/servlet-context.xml
-            </param-value>
+            <param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
